# offer-radar

./: .gitignore  README.md  fix_po.py  offer-radar  offer-radar.bat  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
locales/: messages.pot
locales/pl/LC_MESSAGES/: messages.mo  messages.po
scripts/: reset_db.py
src/application/: scraper_factory.py  session_manager.py  utils.py
src/cli/: i18n.py  main.py  menu.py
src/domain/: interfaces.py  models.py
src/infrastructure/database/: config.py  init_db.py  orm_models.py
src/infrastructure/repositories/: listing_repository.py  offer_repository.py  search_session_repository.py  toml_settings_repository.py
src/infrastructure/scrapers/: __init__.py  base.py  olx_parser.py  olx_scraper.py
tests/: test_cli.py  test_menu.py  test_models.py  test_olx_parser.py  test_olx_scraper.py  test_repositories.py  test_scraper_factory.py  test_session_manager.py  test_settings_repository.py
